[gd_scene load_steps=12 format=2]

[ext_resource path="res://Entities/Weapons/MineLayer/Resources/Materials/mine_idle.tres" type="Material" id=1]
[ext_resource path="res://Entities/Weapons/Ordnance/Mine.gd" type="Script" id=2]
[ext_resource path="res://Entities/Weapons/MineLayer/Resources/Materials/mine_triggered.tres" type="Material" id=3]
[ext_resource path="res://Entities/Weapons/Resources/Sounds/MineFireSound.wav" type="AudioStream" id=4]
[ext_resource path="res://Entities/Weapons/Resources/Sounds/MineTriggerSound.wav" type="AudioStream" id=5]
[ext_resource path="res://Entities/Effects/MineExplosion.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Weapons/Resources/Sounds/MineDestroySound.wav" type="AudioStream" id=7]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.2
bottom_radius = 0.3
height = 0.1
radial_segments = 12
rings = 1

[sub_resource type="CylinderShape" id=4]
height = 0.1
radius = 0.2

[sub_resource type="CylinderShape" id=3]
height = 1.5
radius = 2.0

[sub_resource type="CylinderShape" id=2]
height = 1.5
radius = 0.3

[node name="Mine" type="StaticBody"]
collision_layer = 4
collision_mask = 12
script = ExtResource( 2 )
idle_material = ExtResource( 1 )
triggered_material = ExtResource( 3 )
death_explosion = ExtResource( 6 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0498589, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
shape = SubResource( 4 )

[node name="TankDetectArea" type="Area" parent="."]
collision_layer = 4
collision_mask = 3
monitorable = false

[node name="TankCollision" type="CollisionShape" parent="TankDetectArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
shape = SubResource( 3 )
disabled = true

[node name="ProjectileDetectArea" type="Area" parent="."]
collision_layer = 4
collision_mask = 4

[node name="ProjectileCollision" type="CollisionShape" parent="ProjectileDetectArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
shape = SubResource( 2 )

[node name="SetupTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="DetonateTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="FireSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_size = 3.0
autoplay = true

[node name="TriggerSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
attenuation_model = 3
pitch_scale = 1.25

[node name="DestroySound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
attenuation_model = 3
pitch_scale = 0.85

[connection signal="body_entered" from="TankDetectArea" to="." method="_on_TankDetectArea_body_entered"]
[connection signal="body_entered" from="ProjectileDetectArea" to="." method="_on_ProjectileDetectArea_body_entered"]
[connection signal="timeout" from="SetupTimer" to="." method="_on_SetupTimer_timeout"]
[connection signal="timeout" from="DetonateTimer" to="." method="_on_DetonateTimer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
